--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/classnames": "^2.2.6",
     "@types/react": "^16.4.13",
     "@types/react-dom": "^16.0.7",
+    "@types/react-helmet": "^5.0.7",
     "@types/react-redux": "^6.0.7",
     "@types/react-router-config": "^1.0.9",
     "@types/react-router-dom": "^4.3.1",
@@ -38,6 +39,7 @@
     "loadable-components": "^2.2.3",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-helmet": "^5.2.0",
     "react-redux": "^5.0.7",
     "react-redux-firebase": "^2.2.1",
     "react-router-config": "^4.4.0-beta.6",
